--- a/post/hello.org
+++ b/post/hello.org
@@ -16,7 +16,7 @@ Stay tuned! I have a number of things in flight I'm planning to publish as time 
 - Working with the WinAPI from Rust for Reserve Engineering
 - High-performance Python
 - [[https://docs.python.org/3/whatsnew/3.12.html#optimizations][Python 3.12 optimizations]]
-- Why do I still use [[https://osdn.net/projects/mingw/][MinGW]] and [[https://www.msys2.org/][MSYS]]?
+- Why I still use [[https://osdn.net/projects/mingw/][MinGW]] and [[https://www.msys2.org/][MSYS]]
 - Performance comparison of popular Kafka libraries
   
 *** Machine Learning
