--- a/post/hello.org
+++ b/post/hello.org
@@ -17,23 +17,26 @@ Stay tuned! I have a number of things in flight I'm planning to publish as time 
 - [[https://docs.python.org/3/whatsnew/3.12.html#optimizations][Python 3.12 optimizations]]
 - Why I still use [[https://osdn.net/projects/mingw/][MinGW]] and [[https://www.msys2.org/][MSYS]]
 - Performance comparison of popular Kafka libraries
-  
+- GPU-accelerated
+
 *** Machine Learning
-- Evaluating ML Systems (multi-part)
 - Continuous learning in production with Kafka
 - Fine-tuning foundational LLMs with fine literature in my home lab
 - Building an open-source recommendation engine for Classic Literature
+- Evaluating ML Systems (multi-part) in productions
+  - RAG
+  - Agents
 
 *** Data Science / Data Engineering
 - Cleansing and storing book data ([[https://libgen.is/repository_torrent/][LibGen]])
-- My Kaggle experience  
-  
+- My Kaggle experience
+
 *** Platform Engineering
 - Proxying services through Jupyter
 - Moving from Terraform HCL to Terraform CDK
 - Options for free cloud credits for research projects
 - Developer environments with Coder
-  
+
 *** Reverse Engineering
 - Creating a SoftICE clone in 2025
 - Working with the WinAPI in Rust for RE
@@ -51,7 +54,7 @@ Stay tuned! I have a number of things in flight I'm planning to publish as time 
 - [[https://www.oreilly.com/library/view/building-machine-learning/9781492045106/][Building Machine Learning Powered Applications]] by Emmanuel Ameisen
 - [[https://www.oreilly.com/library/view/architecting-data-and/9781098151607/][Architecting Data and Machine Learning Platforms]] by Marco Tranquillin, Valliappa Lakshmanan, Firat Tekiner
 - Old /C++ Gems/ books
-  
+
 *** Home Lab
 - Why ensuring directplay-compatibility is the best optimization for [[https://plex.tv/][Plex]]
 - Hardware overview of my home lab & how to optimize for cost and performance
