--- a/post/hello.org
+++ b/post/hello.org
@@ -42,7 +42,7 @@ Stay tuned! I have a number of things in flight I'm planning to publish as time 
 - Working with the WinAPI in Rust for RE
 
 *** Emacs
-- Signal processing for Emacs shell on Windows
+- Signal processing in the Emacs shell on Windows
 - Emacs as a database client
 - Portable debugging config in Emacs
 - Optimal-performance remote-editing Emacs config
