--- a/post/direct-play.org
+++ b/post/direct-play.org
@@ -34,7 +34,7 @@ I run a typical 'junkbox' home media server without much in terms of hardware or
 
   #+begin_src
   CPU: quad core Intel Core i7-4790K (-MT MCP-) speed/min/max: 4397/800/4400 MHz
-  Kernel: 6.10.6-arch1-1 x86_64
+  Kernel: 6.10.6 x86_64
   Up: 282d 16h 53m
   Mem: 4.3/31.29 GiB (13.7%)
   Storage: 21.18 TiB (31.5% used) Procs: 221
