--- a/misc/about.org
+++ b/misc/about.org
@@ -20,7 +20,7 @@ I'm a Software Engineer with a mixed background in Distributed Systems, Data-Int
 
 * Interests
 
-My main interests in technology revolve around building more capable and cost-effective Data/ML platform solutions. I'm consistently trying to improve my own engineering rigor in developing systems and software, and helping others to do the same.
+My main interests in technology revolve around reserve engineering, building more capable and cost-effective Data/ML platform solutions and just about any software that can improve people's lives. I'm consistently trying to improve my own engineering rigor in developing systems and software, and in helping others to do the same.
 
 I started my Software journey by contibuting to open-source reverse engineering projects ([[https://macroquest.org/][MacroQuest]] & [[https://www.eqemulator.org/][EQEmu]]) and it remains a fascination of mine. I am hoping to contribute more to these efforts and document my discoveries in this blog.
 
