--- a/misc/about.org
+++ b/misc/about.org
@@ -15,7 +15,7 @@
 
 * About Me 
 
-I'm a Software Engineer with a mixed background in Distributed Systems, Data-Intensive Applications, Web Backend and Machine Learning. Over the last decade of my career I've been focusing on creating platforms for building Big Data and Machine Learning products. I also contribute to open-source software in the reverse engineering space.
+I'm a Software Engineer with a mixed background in Distributed Systems, Data-Intensive Applications, Web Backend and Machine Learning. Over the last decade of my career I've been focusing on creating platforms for building Big Data and Machine Learning products using open-source software. I also contribute to open-source software mostly in these areas and in the reverse engineering space.
 
 
 * Interests
